contrib/tree-sitter/test/corpus/brackets.txt
================================================================================
Standalone quotation and array brackets
================================================================================

[ 1 2 ] { 1 2 }

--------------------------------------------------------------------------------

(source_file
  (quotation (integer) (integer))
  (array (integer) (integer)))

================================================================================
Standalone stack effect parens
================================================================================

( a b -- c )

--------------------------------------------------------------------------------

(source_file (stack_effect (word) (word) (word)))

================================================================================
Fused-word control cases: no whitespace means one plain word, not brackets
================================================================================

(tokens) (=)

--------------------------------------------------------------------------------

(source_file (word) (word))

================================================================================
Nested quotations and arrays
================================================================================

[ [ 1 ] { 2 } ]

--------------------------------------------------------------------------------

(source_file
  (quotation
    (quotation (integer))
    (array (integer))))
