contrib/tree-sitter/test/corpus/comments.txt
================================================================================
Line comment
================================================================================

1 2 + \ add two numbers

--------------------------------------------------------------------------------

(source_file (integer) (integer) (word) (comment))

================================================================================
Doc comment
================================================================================

\\ Push an empty quotation.
[]: [ [ ] ] ;

--------------------------------------------------------------------------------

(source_file
  (doc_comment)
  (word_definition
    name: (symbol)
    body: (quotation
      (quotation))))

================================================================================
Bare backslash at end of line is an empty comment
================================================================================

1 \
2

--------------------------------------------------------------------------------

(source_file (integer) (comment) (integer))

================================================================================
Backslash immediately followed by a letter is a word, not a comment
================================================================================

\word \\word

--------------------------------------------------------------------------------

(source_file (word) (word))

================================================================================
Comments and doc-comments are extras: legal inside quotations and stack effects
================================================================================

foo: ( a \ a comment
       -- b ) [
  \\ a doc comment inside the body
  a 1 +
] ;

--------------------------------------------------------------------------------

(source_file
  (word_definition
    name: (symbol)
    effect: (stack_effect (word) (comment) (word))
    body: (quotation
      (doc_comment)
      (word)
      (integer)
      (word))))
