contrib/tree-sitter/test/corpus/numbers.txt
================================================================================
Decimal integer
================================================================================

42

--------------------------------------------------------------------------------

(source_file (integer))

================================================================================
Hex, octal, and binary integers, both letter cases
================================================================================

0xFF 0XFF 0o777 0O777 0b1010 0B1010

--------------------------------------------------------------------------------

(source_file (integer) (integer) (integer) (integer) (integer) (integer))

================================================================================
Underscore separators, including immediately after a base prefix
================================================================================

0x_FF 0xFF_FF 0o_777 0b_0101 0B0101_0001 1_000_000 1_000.000_5

--------------------------------------------------------------------------------

(source_file (integer) (integer) (integer) (integer) (integer) (integer) (float))

================================================================================
Negative numbers across every base
================================================================================

-3.14 -0x10 -0o10 -0b1010 -1_000.5

--------------------------------------------------------------------------------

(source_file (float) (integer) (integer) (integer) (float))

================================================================================
Floats with and without an exponent, with and without a dot
================================================================================

3.14 0.5 5.0 100.001 1.5e10 1.5E10 2.5e-3 1e10 1e5 9.999999999999998e19

--------------------------------------------------------------------------------

(source_file
  (float) (float) (float) (float) (float) (float) (float) (float) (float) (float))

================================================================================
Non-number edge cases resolve to word
================================================================================

- -foo .

--------------------------------------------------------------------------------

(source_file (word) (word) (word))

================================================================================
Bignum-sized integer has no special syntax
================================================================================

99999999999999999999

--------------------------------------------------------------------------------

(source_file (integer))
