contrib/tree-sitter/test/corpus/strings.txt
================================================================================
Empty string
================================================================================

""

--------------------------------------------------------------------------------

(source_file (string))

================================================================================
Basic string
================================================================================

"hello"

--------------------------------------------------------------------------------

(source_file (string))

================================================================================
Recognized escape sequences
================================================================================

"a\nb" "a\rb" "a\tb" "a\\b" "a\"b" "a\'b" "a\x41b" "a\u{1F600}b"

--------------------------------------------------------------------------------

(source_file
  (string (escape_sequence))
  (string (escape_sequence))
  (string (escape_sequence))
  (string (escape_sequence))
  (string (escape_sequence))
  (string (escape_sequence))
  (string (escape_sequence))
  (string (escape_sequence)))

================================================================================
Unrecognized escape is still consumed without breaking the string
================================================================================

"a\zb"

--------------------------------------------------------------------------------

(source_file (string (escape_sequence)))

================================================================================
String with a literal embedded newline spans multiple lines
================================================================================

"multi-line
 strings work"

--------------------------------------------------------------------------------

(source_file (string))

================================================================================
Adjacent tokens around a string
================================================================================

foo "bar" baz

--------------------------------------------------------------------------------

(source_file (word) (string) (word))

================================================================================
A string whose content contains a colon before the closing quote is not
misread as a symbol ending at that internal colon
================================================================================

"Coordinates:" print-line

--------------------------------------------------------------------------------

(source_file (string) (word))
