contrib/tree-sitter/test/corpus/symbols.txt
================================================================================
Basic symbols
================================================================================

name: foo-bar:

--------------------------------------------------------------------------------

(source_file (symbol) (symbol))

================================================================================
Operator word turned into a symbol
================================================================================

+:

--------------------------------------------------------------------------------

(source_file (symbol))

================================================================================
Double colon is a symbol whose name is a single colon
================================================================================

::

--------------------------------------------------------------------------------

(source_file (symbol))

================================================================================
Bare colon alone is a word, not a symbol
================================================================================

:

--------------------------------------------------------------------------------

(source_file (word))

================================================================================
Internal colon: still one symbol ending in the trailing colon
================================================================================

shape:circle:

--------------------------------------------------------------------------------

(source_file (symbol))

================================================================================
Non-trailing colon stays one word, not split
================================================================================

foo:bar

--------------------------------------------------------------------------------

(source_file (word))
